--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,10 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation("com.squareup.okhttp3:logging-interceptor:4.7.2")
+    //room
+    implementation "androidx.room:room-runtime:2.2.5"
+    kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-ktx:2.2.5"
+
 
 }
